# apple-profiler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  smithery.yaml
.claude/: learnings.md  narrative.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
skills/profiler-guide/: SKILL.md
src/apple_profiler/: __init__.py  __main__.py  _models.py  _parser.py  _xctrace.py  mcp_server.py  trace.py
src/apple_profiler/tools/: __init__.py  _frameworks.py  _gpu_counters.py  gputrace_depgraph.py  gputrace_dump_setbuffer.py  gputrace_perfetto.py  gputrace_scheduling.py  gputrace_timeline.py  xcode_gputrace_automation.js
tests/: conftest.py  test_depgraph.py  test_mcp_gpu_tools.py  test_mcp_integration.py  test_metal_trace.py  test_models.py  test_parser.py  test_perfetto.py  test_perfetto_pftrace.py  test_real_traces.py  test_trace.py
tests/fixtures/: cpu_profile.xml  os_signpost.xml  os_signpost_interval.xml  potential_hangs.xml  time_profile.xml  toc.xml  toc_time_profile.xml
tests/fixtures/real/: finder_cpu_profile.xml  finder_toc.xml  hangs_potential_hangs.xml  hangs_toc.xml  signpost_events.xml  signpost_intervals.xml  signpost_toc.xml
tools/: gpu_counter_names.py  gputrace_depgraph.py  gputrace_dump_setbuffer.py  gputrace_perfetto.py  gputrace_timeline.py  metal_barrier_test.swift  metal_rosetta_decode.py  metal_rosetta_stone.swift  perfetto_proto_prototype.py  xcode_gputrace_automation.js
