[project]
name = "apple-profiler"
version = "0.2.0"
description = "Python wrapper for xctrace export XML parsing"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
apple-profiler = "apple_profiler.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_profiler"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest-timeout>=2.4.0",
    "perfetto>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require xctrace (deselect with '-m \"not integration\"')",
    "mcp_integration: tests that exercise MCP tools via Claude Code CLI",
    "metal_integration: tests that compile and trace Metal compute programs",
]
