[project]
name = "apple-profiler"
version = "0.2.0"
description = "MCP server for CPU and GPU performance profiling on Apple platforms"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Robert Taylor"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/roberte3/apple-profiler"
Repository = "https://github.com/roberte3/apple-profiler"

[project.scripts]
apple-profiler = "apple_profiler.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_profiler"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest-timeout>=2.4.0",
    "perfetto>=0.7",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require xctrace (deselect with '-m \"not integration\"')",
    "mcp_integration: tests that exercise MCP tools via Claude Code CLI",
    "metal_integration: tests that compile and trace Metal compute programs",
]
